--- a/css/styles.css
+++ b/css/styles.css
@@ -11052,3 +11052,24 @@ html {
 address {
   font-size: 20px;
 }
+
+.port-container {
+/*  position: relative;*/
+  text-align: center;
+  color: white;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 25px;
+  color: black;
+}
+
+.teaser {
+  opacity: 0.4;
+  height: 100%;
+  width: 100%;
+}
